--- a/public/chat_assets/css/style8a54.css
+++ b/public/chat_assets/css/style8a54.css
@@ -3150,6 +3150,11 @@ a.fn__like.no_border .fn__svg {
     color: var(--techwave-heading-color)
 }
 
+.techwave_fn_rename, .title {
+    font-family: var(--techwave-heading-font-family);
+    color: var(--techwave-heading-color)
+}
+
 .fn__details_list .title {
     margin: 0;
     padding: 0;
@@ -3205,6 +3210,7 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_chat-type.opened,
+.techwave_fn_rename.opened,
 .techwave_fn_report.opened {
     pointer-events: all;
     opacity: 1;
@@ -3248,6 +3254,7 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_chat-type .title,
+.techwave_fn_rename .title,
 .techwave_fn_report .title {
     text-align: center;
     margin: 0 0 4px;
@@ -3533,6 +3540,7 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_chat-type select,
+.techwave_fn_rename select,
 .techwave_fn_image_generation_page .generation__sidebar .prompt_magic_switcher,
 .techwave_fn_sign .form__pass {
     margin-bottom: 30px
@@ -5696,7 +5704,8 @@ a.fn__like.no_border .fn__svg {
 
 .fn__generation_item .item_header .title_holder,
 .techwave_fn_font .techwave_fn_button,
-.techwave_fn_chat-type .techwave_fn_button{
+.techwave_fn_chat-type, .techwave_fn_button,
+.techwave_fn_rename, .techwave_fn_button{
     width: 100%
 }
 
@@ -5855,7 +5864,8 @@ a.fn__like.no_border .fn__svg {
 .fn__bookmark,
 .fn__model_item .item,
 .techwave_fn_font .font__dialog,
-.techwave_fn_chat-type .font__dialog {
+.techwave_fn_chat-type, .font__dialog,
+.techwave_fn_rename, .font__dialog {
     background-color: var(--techwave-some-r-bg-color)
 }
 
@@ -6260,7 +6270,8 @@ a.fn__like.no_border .fn__svg {
 .fn__model_item .item__author,
 .fn__model_item.new .item,
 .techwave_fn_font,
-.techwave_fn_chat-type {
+.techwave_fn_chat-type,
+.techwave_fn_rename {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -6397,7 +6408,8 @@ a.fn__like.no_border .fn__svg {
 .fn__bookmark,
 .fn__model_item .author_name,
 .techwave_fn_font label,
-.techwave_fn_chat-type label {
+.techwave_fn_chat-type label,
+.techwave_fn_rename, .label {
     color: var(--techwave-heading-color)
 }
 
@@ -6536,7 +6548,8 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_font,
-.techwave_fn_chat-type {
+.techwave_fn_chat-type,
+.techwave_fn_rename {
     pointer-events: none;
     opacity: 0;
     visibility: hidden;
@@ -6572,7 +6585,8 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_font .font__closer_link,
-.techwave_fn_chat-type .font__closer_link {
+.techwave_fn_chat-type .font__closer_link,
+.techwave_fn_rename, .font__closer_link {
     position: fixed;
     right: 35px;
     top: 35px;
@@ -6580,7 +6594,8 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_font .font__closer,
-.techwave_fn_chat-type .font__closer {
+.techwave_fn_chat-type .font__closer,
+.techwave_fn_rename, .font__closer {
     z-index: 1;
     position: absolute;
     top: 0;
@@ -6590,7 +6605,8 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_font .font__dialog,
-.techwave_fn_chat-type .font__dialog {
+.techwave_fn_chat-type .font__dialog,
+.techwave_fn_rename, .font__dialog {
     width: 500px;
     max-width: 100%;
     border-radius: 5px;
@@ -6601,7 +6617,8 @@ a.fn__like.no_border .fn__svg {
 }
 
 .techwave_fn_font label,
-.techwave_fn_chat-type label {
+.techwave_fn_chat-type label,
+.techwave_fn_rename, .label {
     display: block;
     font-size: 16px;
     font-weight: 400;
